# acrotrainer_website

./: README.md  docker-compose.yml  heroku.yml  pyproject.toml  pytest.ini  requirements.txt  styleguide.md
.github/workflows/: python-app.yml
acrotrainer/: admin.py  apps.py  cookie_cart.py  helpers.py  models.py  urls.py  views.py
acrotrainer/migrations/: 0001_initial.py  0002_product_image.py  0003_auto_20210307_2310.py  0004_auto_20210312_0239.py
acrotrainer/templates/store/: 404.html  cart.html  checkout.html  detail.html  login.html  main.html  signup.html  store.html  welcome.html
acrotrainer/tests/: test_urls.py
complete_auth/: apps.py  forms.py
complete_auth/templates/account/: account_inactive.html  base.html  email.html  email_confirm.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  password_set.html  signup.html  signup_closed.html  verification_sent.html  verified_email_required.html
core/: settings.py  urls.py
static/css/: base.css  login.css
static/js/: cart.js
tests/: test_urls.py
